--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,6 @@ Alexander Van de Sande <alex.vandesande@ethdev.com>
 Bas van Kervel <bas@ethdev.com>
 Fabian Vogelsteller <fabian.vogelsteller@gmail.com>
 
-Expanse Version
-Daniel Conway <dan@expanse.tech>
+WhaleCoin Version
+Parth Oberoi <htrapdev@gmail.com>
+Rhett Craighton <email>
