--- a/interface/i18n/mist.de.i18n.json
+++ b/interface/i18n/mist.de.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "Über __app__",
                 "checkForUpdates": "Nach Aktualisierungen suchen...",
-                "checkForNodeUpdates": "Nach Expanse Softwareknoten Aktualisierungen suchen...",
+                "checkForNodeUpdates": "Nach WhaleCoin Softwareknoten Aktualisierungen suchen...",
                 "services": "Dienste",
                 "hide": "__app__ ausblenden",
                 "hideOthers": "Andere ausblenden",
@@ -43,7 +43,7 @@
                 "runTests": "Tests durchführen",
                 "logFiles": "Logdatei anzeigen",
                 "openRemix": "Remix IDE öffnen",
-                "ethereumNode": "Expanse Softwareknoten",
+                "ethereumNode": "WhaleCoin Softwareknoten",
                 "network": "Netzwerk",
                 "mainNetwork": "Hauptnetzwerk",
                 "startMining": "⛏ Mining starten (nur auf Testnetz)",
@@ -69,7 +69,7 @@
             "nodeStartup": "Anscheinend konnte der Softwareknoten nicht gestartet werden, läuft evtl. schon eine andere Instanz? Oder läuft eventuell gerade ein Datenbank-Update?",
             "timeSync": {
                 "title": "Deine Computer Uhr ist nicht synchronisiert!",
-                "description": "Um mit dem Expanse netzwerk zu synchronisieren muss deine Computer Uhr mit einem Zeit-Server synchronisiert werden.",
+                "description": "Um mit dem WhaleCoin netzwerk zu synchronisieren muss deine Computer Uhr mit einem Zeit-Server synchronisiert werden.",
                 "win32": "Gehe dazu in deine Internet Zeit Einstellungen in deinen System Einstellungen and checke die Box. Siehe diese Anleitung für Details: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Um Zeit Synchronisation einzuschalten installiere \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "Um Zeit Synchronisation einzuschalten, öffne die System Einstellungen und checke \"Zeit Datum automatisch\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the Expanse classic project at\nhttps://Expanseclassic.github.io.\n\nTo revert to the main Expanse chain follow the tutorial here:\nhttps://github.com/Expanse/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -93,14 +93,14 @@
             "blockReceived": "Neuer Block empfangen",
             "timeSinceBlock": "Abgelaufene Zeit seit dem letzten Block",
             "blockNumber": "Ihre letzte Blocknummer",
-            "testnetExplain": "Sie sind mit dem Testnetz verbunden, SENDEN SIE KEINE echten Expanse an diese Adressen",
+            "testnetExplain": "Sie sind mit dem Testnetz verbunden, SENDEN SIE KEINE echten WhaleCoin an diese Adressen",
             "peers": "Peers",
             "checkingWhichNetwork": "Checking network...",
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real Expanse to these addresses",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -115,23 +115,23 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Laufender Expanse Softwareknoten gefunden!",
-            "startingNode": "Starte Expanse Softwareknoten...",
+            "runningNodeFound": "Laufender WhaleCoin Softwareknoten gefunden!",
+            "startingNode": "Starte WhaleCoin Softwareknoten...",
             "startedNode": "Starte Anwendung...",
-            "nodeConnectionTimeout": "Expanse Softwareknoten konnte nicht gestartet werden!<br><small>Wenn Sie <a href='https://www.Expanse.org/cli#geth' class='button' target='_blank'>Geth installiert haben,</a>, verwenden Sie bitte diesen Befehl, um Geth zu starten: <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/Expanse/mist/issues' class='button' target='_blank'>oder senden Sie einen Fehlerreport</a></small>",
-            "nodeBinaryNotFound": "Keine Programmdatei für den Expanse Softwareknoten gefunden!<br><small> <a href='https://www.Expanse.org/cli#geth' class='button' target='_blank'> Bitte starten Sie den Expanse Softwareknoten manuell. </a> </small>",
-            "nodeSyncing": "Expanse Softwareknoten muss synchronisieren, bitte warten...",
+            "nodeConnectionTimeout": "WhaleCoin Softwareknoten konnte nicht gestartet werden!<br><small>Wenn Sie <a href='https://www.WhaleCoin.org/cli#geth' class='button' target='_blank'>Geth installiert haben,</a>, verwenden Sie bitte diesen Befehl, um Geth zu starten: <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'>oder senden Sie einen Fehlerreport</a></small>",
+            "nodeBinaryNotFound": "Keine Programmdatei für den WhaleCoin Softwareknoten gefunden!<br><small> <a href='https://www.WhaleCoin.org/cli#geth' class='button' target='_blank'> Bitte starten Sie den WhaleCoin Softwareknoten manuell. </a> </small>",
+            "nodeSyncing": "WhaleCoin Softwareknoten muss synchronisieren, bitte warten...",
             "nodeSyncInfo": "Block __displayBlock__ von __highestBlock__ wird heruntergeladen.",
             "nodeSyncConnecting": "Suche nach Peers...",
             "peerSearchTimeout": "Peer-Suche überspringen",
-            "stoppingNode": "Stoppe Expanse Softwareknoten...",
-            "nodeStarting": "Expanse Softwareknoten startet...",
-            "nodeStarted": "Expanse Softwareknoten gestartet",
-            "nodeConnected": "Expanse Softwareknoten verbunden",
-            "nodeStopping": "Expanse Softwareknoten stoppt...",
-            "nodeStopped": "Expanse Softwareknoten gestoppt",
-            "nodeError": "Verbindungsproblem zum Expanse Softwareknoten :'(",
-            "unableToBindPort": "Expanse Softwareknoten kann nicht gestartet werden. Läuft bereits eine andere Instanz?",
+            "stoppingNode": "Stoppe WhaleCoin Softwareknoten...",
+            "nodeStarting": "WhaleCoin Softwareknoten startet...",
+            "nodeStarted": "WhaleCoin Softwareknoten gestartet",
+            "nodeConnected": "WhaleCoin Softwareknoten verbunden",
+            "nodeStopping": "WhaleCoin Softwareknoten stoppt...",
+            "nodeStopped": "WhaleCoin Softwareknoten gestoppt",
+            "nodeError": "Verbindungsproblem zum WhaleCoin Softwareknoten :'(",
+            "unableToBindPort": "WhaleCoin Softwareknoten kann nicht gestartet werden. Läuft bereits eine andere Instanz?",
             "nodeSyncInfoStates": "Lade Block __displayBlock__ von __highestBlock__, <br> Lade chain structure __displayState__ von __displayKnownStates__",
             "nodeSyncFoundPeers": "Verbinde mit __peers__ Peers...",
             "launchApp": "Starte die Anwendung",
@@ -140,8 +140,8 @@
                 "downloading": "Lade neue Softwareknoten-Version herunter...",
                 "loadConfig": "Lade Softwareknoten Konfiguration...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse Softwareknoten aktuell...",
-                "error": "Expanse Softwareknoten konnte nicht gestartet werden."
+                "done": "WhaleCoin Softwareknoten aktuell...",
+                "error": "WhaleCoin Softwareknoten konnte nicht gestartet werden."
             }
         },
         "popupWindows": {
@@ -177,7 +177,7 @@
                 "estimatedFee": "Geschätzter Gebührenbetrag",
                 "estimatedGasError": "Der Auftrag kann nicht ausgeführt werden, da er das gesamte vorgegebene Gas verbrauchen würde.",
                 "gasPrice": "Gaspreis",
-                "perMillionGas": "Expanse pro Millionen Gas",
+                "perMillionGas": "WhaleCoin pro Millionen Gas",
                 "data": "Daten",
                 "buttons": {
                     "sendTransaction": "Transaktion absenden"
@@ -199,13 +199,13 @@
                 "lookupDataExplainer": "Look this up on the internet"
             },
             "onboarding": {
-                "description": "Expanse ist eine dezentrale Plattform, um Anwendungen auf einer Blockchain zu bauen: Fälschungssichere Software, die Werte und Vermögen übertragen kann und für immer besteht",
+                "description": "WhaleCoin ist eine dezentrale Plattform, um Anwendungen auf einer Blockchain zu bauen: Fälschungssichere Software, die Werte und Vermögen übertragen kann und für immer besteht",
                 "goToTestnet": "Verwende das Testnetz",
                 "goToTestnetDescription": "Teste die Technologie frei in der Testnetz-Sandbox, ",
                 "gotoMainnet": "Verwende das Hauptnetz",
-                "gotoMainnetDescription": " Sie werden etwas Expanse benötigen, um Verträge anzulegen und auszuführen. Wir werden Ihnen helfen, etwas zu bekommen ...",
+                "gotoMainnetDescription": " Sie werden etwas WhaleCoin benötigen, um Verträge anzulegen und auszuführen. Wir werden Ihnen helfen, etwas zu bekommen ...",
                 "doYouHaveAWalletFile": "Haben Sie eine Wallet-Datei?",
-                "walletFileDescription": "<p>Wallet-Datei zum importieren in dieses Fenster ziehen.<br>Wenn Sie 2014 am Expanse-Pre-sale teilgenommen haben, sollten Sie über eine Datei mit dem Dateinamen <code>ethereum_wallet_backup.json</code> verfügen. Sie wurde nach dem Kauf heruntergeladen und Ihnen auch per E-Mail geschickt.</p>",
+                "walletFileDescription": "<p>Wallet-Datei zum importieren in dieses Fenster ziehen.<br>Wenn Sie 2014 am WhaleCoin-Pre-sale teilgenommen haben, sollten Sie über eine Datei mit dem Dateinamen <code>ethereum_wallet_backup.json</code> verfügen. Sie wurde nach dem Kauf heruntergeladen und Ihnen auch per E-Mail geschickt.</p>",
                 "dropFilesHere": "Pre-sale Datei laden",
                 "creating": "Erstellen...",
                 "importing": "Importieren...",
@@ -214,14 +214,14 @@
                 "protectTitle": "Schützen Sie Ihr Konto",
                 "protectDescription": "Wählen Sie ein Passwort für Ihr Konto. Machen Sie es so stark, als wären es Ihre Hausschlüssel!",
                 "accountTitle": "Laden Sie die Datei hoch!",
-                "accountTitleTestnet": "Minen etwas Expanse!",
-                "ExpanseDescription": "Das Expanse Netz basiert auf einem Tokan namens “Expanse”. Sie benötigen eine kleine Menge davon, um irgendetwas auf dem Expanse-Netz zu tun.",
-                "loadItDescription": "Wenn Sie bereits über Bitcoin oder eine andere Kryptowährung verfügen, können Sie diese mit Shapeshift einfach in Expanse umtauschen. <br><br> Wir empfehlen, ca. <strong>0.25 bis 1 Expanse</strong> einzutauschen.",
-                "mineItDescription": "<strong>Auf dem Testnetz können Sie selbst Expanse minen. Bitte gehen Sie dazu in den Menüpunkt <em>Entwicklung</em> menu und wählen Sie <em>Mining starten</em>. </strong> <br> <strong> VERSUCHEN SIE NICHT, ECHTE Expanse AN DIESE ADRESSE ZU SENDEN! </strong>",
+                "accountTitleTestnet": "Minen etwas WhaleCoin!",
+                "WhaleCoinDescription": "Das WhaleCoin Netz basiert auf einem Tokan namens “WhaleCoin”. Sie benötigen eine kleine Menge davon, um irgendetwas auf dem WhaleCoin-Netz zu tun.",
+                "loadItDescription": "Wenn Sie bereits über Bitcoin oder eine andere Kryptowährung verfügen, können Sie diese mit Shapeshift einfach in WhaleCoin umtauschen. <br><br> Wir empfehlen, ca. <strong>0.25 bis 1 WhaleCoin</strong> einzutauschen.",
+                "mineItDescription": "<strong>Auf dem Testnetz können Sie selbst WhaleCoin minen. Bitte gehen Sie dazu in den Menüpunkt <em>Entwicklung</em> menu und wählen Sie <em>Mining starten</em>. </strong> <br> <strong> VERSUCHEN SIE NICHT, ECHTE WhaleCoin AN DIESE ADRESSE ZU SENDEN! </strong>",
                 "you": "SIE",
-                "Expansebase": "Hauptkonto (Expansebase)",
+                "WhaleCoinbase": "Hauptkonto (WhaleCoinbase)",
                 "depositBitcoin": "Bitcoin eintauschen",
-                "learnIt": "Lernen Sie Expanse kennen, während Sie warten",
+                "learnIt": "Lernen Sie WhaleCoin kennen, während Sie warten",
                 "downloadingBlocks": "Blöcke werden heruntergeladen",
                 "tutorial1Description": "<p> Nun müssen Sie lediglich warten, bis der Download abgeschlossen ist. Hier finden Sie weitere Informationen:</p> <h4>Make your own money </h4> <p> Erstellen Sie eine eigene Kryptowährung mit einer festen Geldmenge, Token, die reale Vermögenswerte darstellen, und so weiter ...</p>",
                 "tutorial2Description": "<h4> Erstellen Sie ein Crowdsale</h4> <p> Sammeln Sie Mittel für ein gemeinsames Ziel, vollkommen vertrauenswürdig ohne einen weiteren Dritten. Überwinden Sie die Hürden von traditionellen Crowdfunding-Systemen und gehen Sie direkt an die Quellen, indem Sie Ihre Organisation über die Blockchain mit Mitteln versorgen.</p>",
