--- a/interface/i18n/mist.en.i18n.json
+++ b/interface/i18n/mist.en.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "About __app__",
                 "checkForUpdates": "Check for updates...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Services",
                 "hide": "Hide __app__",
                 "hideOthers": "Hide Others",
@@ -62,7 +62,7 @@
                 "logFiles": "Show log file",
                 "openRemix": "Open Remix IDE",
                 "externalNode": "using external node",
-                "ethereumNode": "Expanse Node",
+                "ethereumNode": "WhaleCoin Node",
                 "network": "Network",
                 "mainNetwork": "Main Network",
                 "nodeMode": "Chain download",
@@ -88,7 +88,7 @@
             "nodeStartup": "It seems like the node couldn't be started, do you already have one running? Is it upgrading the database right now?",
             "timeSync": {
                 "title": "Your computer's clock is not synced.",
-                "description": "To successfully synchronize with the Expanse  network you need to sync your computer's clock with a time sync server.",
+                "description": "To successfully synchronize with the WhaleCoin  network you need to sync your computer's clock with a time sync server.",
                 "win32": "Go to your Internet Time Settings in your system preferences and check the box. See this guide for details: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "To enable a time sync server install \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "To enable time sync, open the time preferences and check \"Set the time and date automatically\"."
@@ -99,7 +99,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -116,7 +116,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "testnetExplain": "You are on the __name__, DO NOT SEND any real ether to these addresses",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on",
@@ -134,20 +134,20 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Found running Expanse node!",
-            "startingNode": "Starting Expanse node...",
-            "stoppingNode": "Stopping Expanse node...",
+            "runningNodeFound": "Found running WhaleCoin node!",
+            "startingNode": "Starting WhaleCoin node...",
+            "stoppingNode": "Stopping WhaleCoin node...",
             "startedNode": "Starting application...",
-            "nodeConnectionTimeout": "Couldn't start an Expanse Node!<br><small>If you <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'>installed Gexp</a>, use this command to run it: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
-            "nodeBinaryNotFound": "No Expanse Node binary found!<br><small> <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'> Please start one manually before. </a> </small>",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
-            "nodeSyncing": "Expanse node needs to sync, please wait...",
+            "nodeConnectionTimeout": "Couldn't start an WhaleCoin Node!<br><small>If you <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'>installed Gexp</a>, use this command to run it: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
+            "nodeBinaryNotFound": "No WhaleCoin Node binary found!<br><small> <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'> Please start one manually before. </a> </small>",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
+            "nodeSyncing": "WhaleCoin node needs to sync, please wait...",
             "nodeSyncInfo": "Downloading block __displayBlock__ of __highestBlock__",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncConnecting": "Looking for peers...",
@@ -159,7 +159,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -233,11 +233,11 @@
                 "lookupDataExplainer": "Look this up on the internet"
             },
             "onboarding": {
-                "description" : "Expanse is a platform for decentralized blockchain apps with a fully featured programming language",
+                "description" : "WhaleCoin is a platform for decentralized blockchain apps with a fully featured programming language",
                 "goToTestnet" : "Use the test network",
                 "goToTestnetDescription" : "Test the technology freely in a sandboxed testnet, without using real exp.",
                 "gotoMainnet" : "Use the main network",
-                "gotoMainnetDescription" : " You’ll need some Exp in order to create and execute contracts. Don't worry we'll help you get some...",
+                "gotoMainnetDescription" : " You’ll need some whl in order to create and execute contracts. Don't worry we'll help you get some...",
                 "doYouHaveAWalletFile" : "Do you have a wallet file?",
                 "walletFileDescription" : "<p>Move any wallet file here to import.<br></p>",
                 "dropFilesHere" : "Drop wallet file",
@@ -249,9 +249,9 @@
                 "protectDescription" : "Choose a password for your new account. Make it as strong as if it would protect your house keys!",
                 "accountTitle" : "Load it up!",
                 "accountTitleTestnet" : "Mine some!",
-                "etherDescription": "The expanse network is based on token called “Exp”. You’ll need a small amount of it to do anything on the Expanse  network.",
-                "loadItDescription" : "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to exp using shapeshift. <br><br> We recommend loading some where between <strong>0.25 to 1 exp</strong>.",
-                "mineItDescription": "<strong>On the testnet you can mine exp yourself by going to the <em>Develop</em> menu and choosing <em>Start Mining</em>. </strong> <br> <strong> DO NOT ATTEMPT TO SEND REAL EXP TO THIS ADDRESS </strong>",
+                "etherDescription": "The WhaleCoin network is based on token called “Exp”. You’ll need a small amount of it to do anything on the WhaleCoin  network.",
+                "loadItDescription" : "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to whl using shapeshift. <br><br> We recommend loading some where between <strong>0.25 to 1 exp</strong>.",
+                "mineItDescription": "<strong>On the testnet you can mine whl yourself by going to the <em>Develop</em> menu and choosing <em>Start Mining</em>. </strong> <br> <strong> DO NOT ATTEMPT TO SEND REAL whl TO THIS ADDRESS </strong>",
                 "you" : "YOU",
                 "etherbase" : "Main account (etherbase)",
                 "depositBitcoin" : "Deposit using Bitcoin",
