--- a/interface/i18n/mist.es.i18n.json
+++ b/interface/i18n/mist.es.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "Sobre __app__",
                 "checkForUpdates": "Buscar actualización...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Servicios",
                 "hide": "Ocultar __app__",
                 "hideOthers": "Ocultar otros",
@@ -42,7 +42,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Ejecutar pruebas",
                 "logFiles": "Mostrar archivo de registro",
-                "ethereumNode": "Nodo de Expanse ",
+                "ethereumNode": "Nodo de WhaleCoin ",
                 "network": "Red",
                 "mainNetwork": "Red principal",
                 "startMining": "⛏ Empezar a minar (sólo Testnet)",
@@ -69,7 +69,7 @@
             "nodeStartup": "Parece que el nodo no se pudo iniciar, tiene uno ya funcionando? ¿Está actualizando la base de datos en este momento?",
             "timeSync": {
                 "title": "El reloj de su ordenador no está sincronizado.",
-                "description": "Para sincronizar correctamente con la red Expanse  necesitas sincronizar el reloj de tu ordenador con un servidor de tiempo.",
+                "description": "Para sincronizar correctamente con la red WhaleCoin  necesitas sincronizar el reloj de tu ordenador con un servidor de tiempo.",
                 "win32": "Ve a los ajustes del tiempo en las preferencias de sistema y marca la casilla. Vea esta guía para más detalles: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Para permitir la sincronización con un servidor de tiempo instale \"ntp\" vía \"apt-get install ntp\".",
                 "darwin": "Para habilitar la sincronización del tiempo, abra las preferencias de tiempo y marque \"Ajuste la hora y la fecha automáticamente\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,7 +99,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -115,23 +115,23 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Encontrado nodo Expanse  funcionando!",
-            "startingNode": "Iniciando el nodo Expanse ...",
+            "runningNodeFound": "Encontrado nodo WhaleCoin  funcionando!",
+            "startingNode": "Iniciando el nodo WhaleCoin ...",
             "startedNode": "Iniciando la aplicación...",
-            "nodeConnectionTimeout": "No se pudo iniciar un nodo Expanse !<br><small>Si <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'>has instalado Gexp</a>, utiliza este comando para ejecutarlo: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> O informa del problema </a></small>",
-            "nodeBinaryNotFound": "No se ha encontrado el binario del nodo Expanse !<br><small> <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'> Por favor, inicie antes uno manualmente. </a> </small>",
-            "nodeSyncing": "El nodo de Expanse  necesita sincronizarse, por favor espere...",
+            "nodeConnectionTimeout": "No se pudo iniciar un nodo WhaleCoin !<br><small>Si <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'>has instalado Gexp</a>, utiliza este comando para ejecutarlo: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> O informa del problema </a></small>",
+            "nodeBinaryNotFound": "No se ha encontrado el binario del nodo WhaleCoin !<br><small> <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'> Por favor, inicie antes uno manualmente. </a> </small>",
+            "nodeSyncing": "El nodo de WhaleCoin  necesita sincronizarse, por favor espere...",
             "nodeSyncInfo": "Descargando bloque __currentBlock__ de __highestBlock__.",
             "nodeSyncConnecting": "Buscando pares...",
             "peerSearchTimeout": "Omitir la búsqueda de pares",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "launchApp": "Launch Application",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,13 +201,13 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse es una plataforma descentralizada para la construcción de aplicaciones en una blockchain: segura y a prueba de manipulaciones que puede transferir valor, propiedad y vive para siempre",
+                "description": "WhaleCoin es una plataforma descentralizada para la construcción de aplicaciones en una blockchain: segura y a prueba de manipulaciones que puede transferir valor, propiedad y vive para siempre",
                 "goToTestnet": "Utiliza la red de pruebas",
                 "goToTestnetDescription": "Pruebe la tecnología libremente en una red de pruebas sin utilizar ether reales.",
                 "gotoMainnet": "Utilizar la red principal",
-                "gotoMainnetDescription": " Necesitarás algunos Expanse para poder crear y ejecutar contratos. No se preocupe, nosotros le ayudaremos a obtener algunos...",
+                "gotoMainnetDescription": " Necesitarás algunos WhaleCoin para poder crear y ejecutar contratos. No se preocupe, nosotros le ayudaremos a obtener algunos...",
                 "doYouHaveAWalletFile": "¿Tiene un archivo de monedero?",
-                "walletFileDescription": "<p>Si participaste en la preventa de Expanse en 2014, deberías tener un archivo llamado <code>ethereum_wallet_backup.json</code>. Se descargó después de la venta y también se envió a su correo electrónico.</p>",
+                "walletFileDescription": "<p>Si participaste en la preventa de WhaleCoin en 2014, deberías tener un archivo llamado <code>ethereum_wallet_backup.json</code>. Se descargó después de la venta y también se envió a su correo electrónico.</p>",
                 "dropFilesHere": "Soltar el archivo de la pre-venta",
                 "creating": "Creando...",
                 "importing": "Importando...",
@@ -217,7 +217,7 @@
                 "protectDescription": "Elija una contraseña para su nueva cuenta que sea tan fuerte como si fuera a proteger las llaves de su casa!",
                 "accountTitle": "Cargarla!",
                 "accountTitleTestnet": "Minar algunos!",
-                "etherDescription": "La red ethereum está basada en un token llamado “Expanse”. Necesitarás una pequeña cantidad de él para hacer cualquier cosa en la red Expanse.",
+                "etherDescription": "La red ethereum está basada en un token llamado “WhaleCoin”. Necesitarás una pequeña cantidad de él para hacer cualquier cosa en la red WhaleCoin.",
                 "loadItDescription": "Si ya dispone de Bitcoin o cualquier otra criptomoneda, puede convertirlas fácilmente a ether utilizando shapeshift. <br><br> Recomendamos una cuantía de entre <strong>0.25 a 1 ether</strong>.",
                 "mineItDescription": "<strong>En la red de pruebas puedes minar ether tú mismo desde el menú <em>Desarrollar</em> y eligiendo <em>Empezar a minar</em>. </strong> <br> <strong> NO INTENTE ENVIAR ETHER REALES A ESTA DIRECCIÓN </strong>",
                 "you": "TÚ",
