--- a/interface/i18n/mist.fr.i18n.json
+++ b/interface/i18n/mist.fr.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "À propos de __app__",
                 "checkForUpdates": "Chercher des mises à jour...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Services",
                 "hide": "Masquer __app__",
                 "hideOthers": "Masquer les autres",
@@ -42,7 +42,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Lancer les tests",
                 "logFiles": "Afficher le journal de log",
-                "ethereumNode": "Nœud Expanse ",
+                "ethereumNode": "Nœud WhaleCoin ",
                 "network": "Réseau",
                 "mainNetwork": "Réseau principal",
                 "startMining": "⛏ Commencer à miner (seulement pour Testnet)",
@@ -69,7 +69,7 @@
             "nodeStartup": "Le nœud n'a apparemment pas pu être lancé, en avez-vous déjà un de lancé ? Est-il en train de mettre à jour la base de données actuellement ?",
             "timeSync": {
                 "title": "L'horloge de votre ordinateur n'est pas synchronisée.",
-                "description": "Pour être correctement synchronisé avec le réseau Expanse , vous devez synchronizer l'horloge de votre ordinateur avec un serveur de synchronisation de temps.",
+                "description": "Pour être correctement synchronisé avec le réseau WhaleCoin , vous devez synchronizer l'horloge de votre ordinateur avec un serveur de synchronisation de temps.",
                 "win32": "Allez dans vos Paramètres d'heure Internet dans vos Panneau de configuration et cochez la case. Lisez ce guide pour plus de détails : http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Pour activer un serveur de synchronisation de temps, installez \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "Pour activer la synchronisation du temps, ouvrez les préférences de temps et cochez \"Régler la date et l'heure automatiquement\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -98,7 +98,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "testnetExplain": "You are on the testnet, DO NOT SEND any real ether to these addresses",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
@@ -115,23 +115,23 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Nœud Expanse  actif trouvé !!",
-            "startingNode": "Démarrage du nœud Expanse  en cours...",
+            "runningNodeFound": "Nœud WhaleCoin  actif trouvé !!",
+            "startingNode": "Démarrage du nœud WhaleCoin  en cours...",
             "startedNode": "Démarrage de l'application...",
-            "nodeConnectionTimeout": "Echec du démarrage du nœud Expanse !<br><small>Si vous <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'>avez installé Geth</a>, utilisez cette commande pour le lancer : <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> Ou signalez le problème </a></small>",
-            "nodeBinaryNotFound": "Pas de binaire du nœud Expanse trouvé !<br><small> <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'> Veuillez en lancer d'abord un manuellement. </a> </small>",
-            "nodeSyncing": "Le nœud Expanse se synchronise, veuillez patienter...",
+            "nodeConnectionTimeout": "Echec du démarrage du nœud WhaleCoin !<br><small>Si vous <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'>avez installé Geth</a>, utilisez cette commande pour le lancer : <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> Ou signalez le problème </a></small>",
+            "nodeBinaryNotFound": "Pas de binaire du nœud WhaleCoin trouvé !<br><small> <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'> Veuillez en lancer d'abord un manuellement. </a> </small>",
+            "nodeSyncing": "Le nœud WhaleCoin se synchronise, veuillez patienter...",
             "nodeSyncInfo": "Télechargement du bloc __displayBlock__ depuis le bloc __highestBlock__.",
             "nodeSyncConnecting": "À la recherche de pairs...",
             "peerSearchTimeout": "Recherche de pairs ignorée",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "launchApp": "Launch Application",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,13 +201,13 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse est une plateforme décentralisée pour la création d'applications sur une blockchain (chaîne de blocs) : logiciel inviolable qui peut transférer de la valeur et de la propriété et qui vit pour toujours",
+                "description": "WhaleCoin est une plateforme décentralisée pour la création d'applications sur une blockchain (chaîne de blocs) : logiciel inviolable qui peut transférer de la valeur et de la propriété et qui vit pour toujours",
                 "goToTestnet": "Utiliser le réseau Testnet",
                 "goToTestnetDescription": "Testez la technologie librement sur le réseau sandboxé (bac à sable), sans utiliser d'ether réel.",
                 "gotoMainnet": "Utiliser le réseau réel",
-                "gotoMainnetDescription": "Vous aurez besoin de quelques Expanse afin de créer et exécuter des contrats. Ne vous en faites pas, nous allons vous aider à en obtenir...",
+                "gotoMainnetDescription": "Vous aurez besoin de quelques WhaleCoin afin de créer et exécuter des contrats. Ne vous en faites pas, nous allons vous aider à en obtenir...",
                 "doYouHaveAWalletFile": "Avez-vous un fichier wallet ?",
-                "walletFileDescription": "<p>Si vous avez participé à la prévente Expanse 2014, vous devriez avoir un fichier nommé <code>ethereum_wallet_backup.json</code>. Il a été téléchargé après la vente et vous a aussi été envoyé par e-mail</p>",
+                "walletFileDescription": "<p>Si vous avez participé à la prévente WhaleCoin 2014, vous devriez avoir un fichier nommé <code>ethereum_wallet_backup.json</code>. Il a été téléchargé après la vente et vous a aussi été envoyé par e-mail</p>",
                 "dropFilesHere": "Déposer un fichier de prévente ici",
                 "creating": "Création...",
                 "importing": "Importation...",
@@ -217,7 +217,7 @@
                 "protectDescription": "Choisissez un mot de passe pour votre nouveau compte. Rendez-le aussi fort que s'il protégeait les clés de votre maison !",
                 "accountTitle": "Chargez le !",
                 "accountTitleTestnet": "Minez-en quelques-uns !",
-                "etherDescription": "Le réseau ethereum est basé sur un token (jeton) appelé “Expanse”. Vous aurez besoin d'un petit montant de cela pour faire ce que vous souhaitez sur le réseau Expanse.",
+                "etherDescription": "Le réseau ethereum est basé sur un token (jeton) appelé “WhaleCoin”. Vous aurez besoin d'un petit montant de cela pour faire ce que vous souhaitez sur le réseau WhaleCoin.",
                 "loadItDescription": "Si vous possédez déjà des Bitcoin, ou n'importe quel autre crypto-monnaie, vous pouvez facilement les convertir en ether en utilisant shapeshift. <br><br> Nous recommandons d'en charger de <strong>0.25 à 1 ether</strong>.",
                 "mineItDescription": "<strong>Sur le réseau Testnet vous pouvez miner de l'ether vous-même en allant sur le menu <em>Développement</em> et en choisissant <em>Commencer à miner</em>. </strong> <br> <strong> N'ESSAYEZ PAS D'ENVOYER DU VERITABLE ETHER A CETTE ADRESSE </strong>",
                 "you": "VOUS",
