--- a/interface/i18n/mist.it.i18n.json
+++ b/interface/i18n/mist.it.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "Info su __app__",
                 "checkForUpdates": "Controlla aggiornamenti...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Servizi",
                 "hide": "Nascondi __app__",
                 "hideOthers": "Nascondi il resto",
@@ -42,7 +42,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Esegui Test",
                 "logFiles": "Mostra file di log",
-                "ethereumNode": "Nodo Expanse",
+                "ethereumNode": "Nodo WhaleCoin",
                 "network": "Rete",
                 "mainNetwork": "Rete principale",
                 "startMining": "⛏ Inizia mining (solo Testnet)",
@@ -69,7 +69,7 @@
             "nodeStartup": "Il nodo non puó essere avviato, ne hai giá uno in esecuzione? Il database é in fase di aggiornamento in questo momento?",
             "timeSync": {
                 "title": "Il tuo orologio di sistema non é sincronizzato.",
-                "description": "E' necessario sincronizzare l'orologio di sistema con un time server per connettere correttamente il tuo nodo alla rete Expanse.",
+                "description": "E' necessario sincronizzare l'orologio di sistema con un time server per connettere correttamente il tuo nodo alla rete WhaleCoin.",
                 "win32": "Apri le impostazioni dell'orologio di sistema, seleziona Orario internet e metti un tick sul box. Segui questa guida (in inglese) per i dettagli: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Per abilitare la sincronia con un time server installa \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "Per abilitare la sincronia dell'ora, apri le preferenze di orario e spunta \"Setta ora e data automaticamente\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,7 +99,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -115,22 +115,22 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Trovato nodo Expanse in esecuzione!",
-            "startingNode": "Avvio nodo Expanse ...",
+            "runningNodeFound": "Trovato nodo WhaleCoin in esecuzione!",
+            "startingNode": "Avvio nodo WhaleCoin ...",
             "startedNode": "Avvio applicazione...",
-            "nodeConnectionTimeout": "Impossibile avviare un nodo Expanse!<br><small>Se <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>hai installato Gexp</a>, usa questo comando per eseguirlo:<br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> o riporta il problema </a></small>",
-            "nodeBinaryNotFound": "Impossibile trovare l'eseguibile del nodo Expanse !<br><small> <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'> Per favore avvialo manualmente prima. </a> </small>",
-            "nodeSyncing": "Il nodo Expanse deve sincronizzarsi, attendere prego...",
+            "nodeConnectionTimeout": "Impossibile avviare un nodo WhaleCoin!<br><small>Se <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>hai installato Gexp</a>, usa questo comando per eseguirlo:<br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> o riporta il problema </a></small>",
+            "nodeBinaryNotFound": "Impossibile trovare l'eseguibile del nodo WhaleCoin !<br><small> <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'> Per favore avvialo manualmente prima. </a> </small>",
+            "nodeSyncing": "Il nodo WhaleCoin deve sincronizzarsi, attendere prego...",
             "nodeSyncInfo": "Scaricamento blocco __displayBlock__ di __highestBlock__.",
             "nodeSyncConnecting": "Alla ricerca di nodi...",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "peerSearchTimeout": "Skip peer search",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,13 +201,13 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse é una piattaforma decentralizzata per costruire applicazioni sfruttando una blockchain: software a prova di manomissione che puó trasferire valore e proprietá vivendo per sempre",
+                "description": "WhaleCoin é una piattaforma decentralizzata per costruire applicazioni sfruttando una blockchain: software a prova di manomissione che puó trasferire valore e proprietá vivendo per sempre",
                 "goToTestnet": "Usa la rete di test",
                 "goToTestnetDescription": "Prova la tecnologia liberamente utilizzando una testnet, senza l'utilizzo di vero ether.",
                 "gotoMainnet": "Usa la rete principale",
-                "gotoMainnetDescription": " Avrai bisogno di un po di Expanse per creare ed eseguire contratti. Non ti preoccupare, ti aiuteremo ad ottenerne un pó...",
+                "gotoMainnetDescription": " Avrai bisogno di un po di WhaleCoin per creare ed eseguire contratti. Non ti preoccupare, ti aiuteremo ad ottenerne un pó...",
                 "doYouHaveAWalletFile": "Hai un file per il wallet ?",
-                "walletFileDescription": "<p>Se hai partecipato alla pre-vendita Expanse nel 2014, dovresti avere un file nominato<code>ethereum_wallet_backup.json</code>. E' stato scaricato dopo la vendita e inoltre inviato al tuo indirizzo e-mail</p>",
+                "walletFileDescription": "<p>Se hai partecipato alla pre-vendita WhaleCoin nel 2014, dovresti avere un file nominato<code>ethereum_wallet_backup.json</code>. E' stato scaricato dopo la vendita e inoltre inviato al tuo indirizzo e-mail</p>",
                 "dropFilesHere": "Trascina file pre-vendita",
                 "creating": "Creazione...",
                 "importing": "Importazione...",
@@ -217,7 +217,7 @@
                 "protectDescription": "Scegli una password per il tuo nuovo account. Rendila piu complicata possibile come se dovesse proteggere le tue chiavi di casa!",
                 "accountTitle": "Stra-caricalo!",
                 "accountTitleTestnet": "Mina un pó!",
-                "etherDescription": "La rete ethereum é basata su di un token chiamato “Expanse”. Avrai bisogno di una piccola quantitá di ether per fare qualsiasi cosa sulla rete Expanse.",
+                "etherDescription": "La rete ethereum é basata su di un token chiamato “WhaleCoin”. Avrai bisogno di una piccola quantitá di ether per fare qualsiasi cosa sulla rete WhaleCoin.",
                 "loadItDescription": "Se possiedi giá Bitcoin, o qualunque altra cryptovaluta, puoi facilmente convertirla in eth usando shapeshift. <br><br> Raccomandiamo di depositare da <strong>0.25 a 1 ether</strong>.",
                 "mineItDescription": "<strong>Sulla rete di test (testnet) puoi minare ether in autonomia utilizzando il menu' <em>Sviluppo</em> e selezionando <em>Inizia Mining</em>. </strong> <br> <strong> NON TENTARE DI INVIARE ETHER REALE A QUESTO INDIRIZZO</strong>",
                 "you": "TU",
