--- a/interface/i18n/mist.ja.i18n.json
+++ b/interface/i18n/mist.ja.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "__app__ について",
                 "checkForUpdates": "アップデートの確認...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "サービス",
                 "hide": "__app__ を隠す",
                 "hideOthers": "ほかを隠す",
@@ -42,7 +42,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "テストを走らせる",
                 "logFiles": "ログファイルを表示する",
-                "ethereumNode": "Expanse  ノード",
+                "ethereumNode": "WhaleCoin  ノード",
                 "network": "ネットワーク",
                 "mainNetwork": "メインネットワーク",
                 "startMining": "⛏ マイニングを始める (テストネット のみ)",
@@ -69,7 +69,7 @@
             "nodeStartup": "ノードが始まらないようです。既に動かしていますか？今すぐデータベースを動かしますか？",
             "timeSync": {
                 "title": "コンピューターのクロックが未だ同期されていません.",
-                "description": "Expanse  のネットワークと同期を成功させるためには、時間を同期させるサーバーとあなたのコンピューターを同期させる必要があります。",
+                "description": "WhaleCoin  のネットワークと同期を成功させるためには、時間を同期させるサーバーとあなたのコンピューターを同期させる必要があります。",
                 "win32": "システム設定を開き、「インターネットの時間設定」を開いてチェックボックスにチェックを入れて下さい。詳しくはこちらのガイドをご覧下さい: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "時間を同期させるサーバーを使うためには、 \"ntp\" を \"apt-get install ntp\"　をコマンドラインから入力してインストールする必要があります。",
                 "darwin": "時間を同期するためには、時間設定を開き \"時間と日にちを同期自動で同期\"　にチェックすることが必要です."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -98,7 +98,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "testnetExplain": "You are on the testnet, DO NOT SEND any real ether to these addresses",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
@@ -115,23 +115,23 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "走っているExpanse Nodeを見つけました!",
-            "startingNode": "Expanse  ノードを開始しています。",
+            "runningNodeFound": "走っているWhaleCoin Nodeを見つけました!",
+            "startingNode": "WhaleCoin  ノードを開始しています。",
             "startedNode": "アプリケーションを開始しています...",
-            "nodeConnectionTimeout": "Expanse Nodeをスタート出来ませんでした!<br><small>もし<a href='http://www.expanse.tech/#downloads' class='button' target='_blank'>Gexp</a>をインストールしているならば,このコマンドを使ってみてください: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'>もしくは問題を報告して下さい。 </a></small>",
-            "nodeBinaryNotFound": "Expanse Node バイナリーが見つかりませんでした。<br><small> <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'> 手動でスタートして下さい。 </a> </small>",
-            "nodeSyncing": "Expanse Node は同期中です...",
+            "nodeConnectionTimeout": "WhaleCoin Nodeをスタート出来ませんでした!<br><small>もし<a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'>Gexp</a>をインストールしているならば,このコマンドを使ってみてください: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'>もしくは問題を報告して下さい。 </a></small>",
+            "nodeBinaryNotFound": "WhaleCoin Node バイナリーが見つかりませんでした。<br><small> <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'> 手動でスタートして下さい。 </a> </small>",
+            "nodeSyncing": "WhaleCoin Node は同期中です...",
             "nodeSyncInfo": "blockをダウンロードしています。 __currentBlock__ of __highestBlock__.",
             "nodeSyncConnecting": "ピアーを探しています。...",
             "peerSearchTimeout": "ピアーの検索を中止しています",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "launchApp": "Launch Application",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,11 +201,11 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse は分散型のプラットフォームで、ブロックチェーン上でアプリケーションを作成することが出来ます。価値を転送することが出来、永続的に稼働するセキュリティの高いソフトウェアを作ることが出来ます。",
+                "description": "WhaleCoin は分散型のプラットフォームで、ブロックチェーン上でアプリケーションを作成することが出来ます。価値を転送することが出来、永続的に稼働するセキュリティの高いソフトウェアを作ることが出来ます。",
                 "goToTestnet": "テストネットワークを使用する",
-                "goToTestnetDescription": "サンドボックスのテストネットで、テクノロジーを自由に使う。本当のExpanseを使うことなく.",
+                "goToTestnetDescription": "サンドボックスのテストネットで、テクノロジーを自由に使う。本当のWhaleCoinを使うことなく.",
                 "gotoMainnet": "メインネットワークを使用する",
-                "gotoMainnetDescription": "コントラクトを作成して実行するためにいくらかのExpanseが必要となるでしょう。心配することはありません、手に入れるためにこちらの方法があります。...",
+                "gotoMainnetDescription": "コントラクトを作成して実行するためにいくらかのWhaleCoinが必要となるでしょう。心配することはありません、手に入れるためにこちらの方法があります。...",
                 "doYouHaveAWalletFile": "ウォレットファイルを持っていますか?",
                 "walletFileDescription": "<p>もし2014年のプリセールに参加していたら、 <code>ethereum_wallet_backup.json</code>という名前のファイルを持っているはずです。プリセールのあとにダウンロードしているか、もしくはEmailにて受け取っているはずです。</p>",
                 "dropFilesHere": "プリセールファイルを削除する",
@@ -217,13 +217,13 @@
                 "protectDescription": "新しいアカウントのためにパスワードを作成する. 必ず強いキーにしてください!",
                 "accountTitle": "もっとダウンロードする!",
                 "accountTitleTestnet": "マイニングを行う!",
-                "etherDescription": "The ethereum network  “Expanse”. Expanse networkで何かを行うためには必ず必要となります。",
+                "etherDescription": "The ethereum network  “WhaleCoin”. WhaleCoin networkで何かを行うためには必ず必要となります。",
                 "loadItDescription": "既にもし Bitcoinを持っているか, もしくは他の暗号通貨を持っている場合には簡単にShapeshiftから変換する事ができます。 <br><br> 私たちは <strong>0.25 to 1 ether</strong>を変換することをおすすめします.",
-                "mineItDescription": "<strong>テストネットでは自分自身でマイニングを行うか、 <em>Develop</em> メニューから <em>マイニングを始める</em>を選んで. </strong> <br> <strong> 絶対にこのアドレスにはExpanseを送らないでください </strong>",
+                "mineItDescription": "<strong>テストネットでは自分自身でマイニングを行うか、 <em>Develop</em> メニューから <em>マイニングを始める</em>を選んで. </strong> <br> <strong> 絶対にこのアドレスにはWhaleCoinを送らないでください </strong>",
                 "you": "あなた",
                 "etherbase": "メインアカウント(etherbase)",
                 "depositBitcoin": "Bitcoinをデポジットする",
-                "learnIt": "待っている間にExpanseWalletのことを学ぶ",
+                "learnIt": "待っている間にWhaleCoinWalletのことを学ぶ",
                 "downloadingBlocks": "ブロックをダウンロードする",
                 "tutorial1Description": "<p> 全て終わり、後はダウンロードが終了するのは待つだけです。ここにいくつかのサジェスチョンがあります。: </p> <h4>あなたのお金を発行する </h4> <p> 暗号通貨を一定の供給と共に作成することが出来、トークンを現実世界のアセットと関連付ける事ができます。</p>",
                 "tutorial2Description": "<h4>クラウドセールを作成する </h4> <p>第三者の介入無く共通のゴールを目指して一緒に進みましょう. 従来のファンディングシステムではとは異なり、ブロックチェーンを用いてダイレクトに資金を集める事ができます。</p>",
