--- a/interface/i18n/mist.ko.i18n.json
+++ b/interface/i18n/mist.ko.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "__app__에 대하여",
                 "checkForUpdates": "업데이트 확인...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "서비스",
                 "hide": "__app__ 숨기기",
                 "hideOthers": "다른 창 숨기기",
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,7 +99,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -118,19 +118,19 @@
             "runningNodeFound": "작동 중인 이더리움 노드를 발견!",
             "startingNode": "이더리움 노드 시작...",
             "startedNode": "어플리케이션 시작...",
-            "nodeConnectionTimeout": "이더리움 노드를 시작할 수 없었습니다! <br><small>만일<a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>Gexp</a> 를 인스톨 했다면, 다음의 명령어를 사용해 실행하세요: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> 또는 이슈를 리포트하세요 </a></small>",
+            "nodeConnectionTimeout": "이더리움 노드를 시작할 수 없었습니다! <br><small>만일<a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>Gexp</a> 를 인스톨 했다면, 다음의 명령어를 사용해 실행하세요: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> 또는 이슈를 리포트하세요 </a></small>",
             "nodeBinaryNotFound": "이더리움 노드 실행파일이 없습니다!<br><small> <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'> 수동으로 이를 먼저 실행하세요.</a> </small>",
             "nodeSyncing": "이더리움 노드에 동기화가 필요합니다, 기다려 주세요...",
             "nodeSyncInfo": "현재 highestBlock__ 중 __currentBlcok 을 다운로드중",
             "nodeSyncConnecting": "피어(peer)를 탐색하고 있는 중...",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "peerSearchTimeout": "Skip peer search",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
