--- a/interface/i18n/mist.pt.i18n.json
+++ b/interface/i18n/mist.pt.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "Sobre __app__",
                 "checkForUpdates": "Procurar Atualizações...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Serviços",
                 "hide": "Ocultar o __app__",
                 "hideOthers": "Ocultar Outros",
@@ -69,7 +69,7 @@
             "nodeStartup": "O node não pode ser iniciado. Você já tem um instalado? Ele está fazendo upgrade do banco de dados?",
             "timeSync": {
                 "title": "Seu computador está fora de sincronia!",
-                "description": "Para sincronizar com a rede Expanse  você precisa que seu computador esteja sincronizado com um servidor de tempo preciso.",
+                "description": "Para sincronizar com a rede WhaleCoin  você precisa que seu computador esteja sincronizado com um servidor de tempo preciso.",
                 "win32": "Vá em ‘Ajustes de tempo’ depois a aba ‘internet’ nas suas preferências de sistema e marque a opção ‘sincronizar com um servidor de tempo’. Veja esse guia para mais detalhes: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Para instalar um servidor de tempo, instale \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "Abra suas preferências, escolha \"preferências de tempo\" e marque \"Ajustar o tempo automaticamente\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,7 +99,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -115,32 +115,32 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Node Expanse  encontrado!",
+            "runningNodeFound": "Node WhaleCoin  encontrado!",
             "startingNode": "Iniciando Node...",
             "startedNode": "Iniciando aplicativo...",
-            "nodeConnectionTimeout": "Não pode inicializar um Node!<br><small> Instale <a href='http://www.expanse.tech/#downloads' class='button' target='_blank'>um manualmente</a>, e use esse comando para executa-lo: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> Caso não consiga, entre em contato </a></small>",
-            "nodeBinaryNotFound": "Nó não encontrado!<br><small><a href='http://www.expanse.tech/#downloads' class='button' target='_blank'>Instale um manualmente</a></small>",
+            "nodeConnectionTimeout": "Não pode inicializar um Node!<br><small> Instale <a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'>um manualmente</a>, e use esse comando para executa-lo: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> Caso não consiga, entre em contato </a></small>",
+            "nodeBinaryNotFound": "Nó não encontrado!<br><small><a href='http://www.WhaleCoin.tech/#downloads' class='button' target='_blank'>Instale um manualmente</a></small>",
             "nodeSyncing": "Sincronizando, favor aguarde...",
             "nodeSyncInfoStates": "Carregando bloco __displayBlock__ de __highestBlock__, <br> Lendo estrutura __displayState__ de __displayKnownStates__",
             "nodeSyncInfo": "Carregando bloco  __displayBlock__ de __highestBlock__.",
             "nodeSyncConnecting": "Procurando outros nós...",
             "peerSearchTimeout": "Não procure nós agora",
             "launchApp": "Iniciar Applicativo",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "clientBinaries": {
                 "scanning": "Checking for node update...",
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,10 +201,10 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse é uma plataforma decentralizada para construir aplicativos no blockchain: apps a prova de fraude, censura ou corrupção que podem transferir valor e títulos de propriedade",
+                "description": "WhaleCoin é uma plataforma decentralizada para construir aplicativos no blockchain: apps a prova de fraude, censura ou corrupção que podem transferir valor e títulos de propriedade",
                 "goToTestnet": "Usar a rede de teste",
                 "goToTestnetDescription": "Experimente a tecnologia usando uma rede de teste sem valores reais.",
-                "gotoMainnet": "Usar a rede Expanse principal",
+                "gotoMainnet": "Usar a rede WhaleCoin principal",
                 "gotoMainnetDescription": "Você irá precisar de ether para executar contratos. Não se preocupe, iremos lhe ajudar com isso",
                 "doYouHaveAWalletFile": "Você tem um arquivo de conta?",
                 "walletFileDescription": "<p>Se você participou da pré-venda de ether em 2014, você deve ter um arquivo chamado  <code>ethereum_wallet_backup.json</code>. Além de fazer o download, esse arquivo também foi enviado para o seu email na época</p>",
@@ -217,7 +217,7 @@
                 "protectDescription": "Crie uma senha para sua conta nova. Escolha uma senha forte como se fosse guardar a porta da sua casa",
                 "accountTitle": "Adicione crédito",
                 "accountTitleTestnet": "Faça mineração",
-                "etherDescription": "A rede Expanse usa ether como uma unidade de troca entre criadores e processadores de contratos. Você não precisa obter uma quantidade muito grande de ether para poder realizar funções na rede.",
+                "etherDescription": "A rede WhaleCoin usa ether como uma unidade de troca entre criadores e processadores de contratos. Você não precisa obter uma quantidade muito grande de ether para poder realizar funções na rede.",
                 "loadItDescription": "Se você já tem Bitcoin ou outra criptomoeda, a forma mais simples de convertê-la é usando ShapeShift. <br><br> Recomendamos carregar algo como  <strong>0.25 a 1 ether</strong>.",
                 "mineItDescription": "<strong>Na rede de teste é possível minerar ether escolhendo o menu <em>Desenvolvimento</em> e depois <em>Iniciar mineração</em>. </strong> <br> <strong> NÃO ENVIE ETHER DE VERDADE PARA ESSE ENDEREÇO </strong>",
                 "you": "VOCÊ",
