--- a/interface/i18n/mist.sq.i18n.json
+++ b/interface/i18n/mist.sq.i18n.json
@@ -6,7 +6,7 @@
                 "about": "Mbi __app__",
                 "quit": "Dil __app__",
                 "checkForUpdates": "Check for updates...",
-                "checkForNodeUpdates": "Check for Expanse node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "Services",
                 "hide": "Hide __app__",
                 "hideOthers": "Hide Others",
@@ -42,7 +42,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Fillo testimet",
                 "logFiles": "Trego skedën me të dhënat e rregjistruara",
-                "ethereumNode": "Nyje Expansei",
+                "ethereumNode": "Nyje WhaleCoini",
                 "network": "Rrjet",
                 "mainNetwork": "Rrjeti kryesor",
                 "startMining": "⛏  Fillo të Prodhosh (Rrjet testimi)",
@@ -69,7 +69,7 @@
             "nodeStartup": "Duket se nyja nuk mund të krijohet. Mos keni ndonje qe është aktive? Mos është duke pasuruar bazën e të dhënave në këto momente?",
             "timeSync": {
                 "title": "Ora e kompjuterit tuaj nuk është e sinkronizuar.",
-                "description": "Në mënyrë që të sinkronizoheni me sukses me rrjetin e Expanse-it ju duhet të sinkronizoni orën tuaj të kompjuterit me një server sinkronizues kohe.",
+                "description": "Në mënyrë që të sinkronizoheni me sukses me rrjetin e WhaleCoin-it ju duhet të sinkronizoni orën tuaj të kompjuterit me një server sinkronizues kohe.",
                 "win32": "Shkoni në \"Internet Time Settings\" tek preferencat tuaja të sistemit dhe përzgjidhni opcionin përkatës. Për detaje shikoni këtë udhëzues: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Që të fusni në punë një server kohe të sinkronizuar instaloni \"ntp\" nëpërmjet \"apt-get install ntp\".",
                 "darwin": "Që të mundësoni një sinkronizim kohe,  hapni preferencat e kohes dhe përzgjidhni \"Set the time and date automatically\"."
@@ -80,7 +80,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Expanse Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/expanse-org/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoin-org/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,7 +99,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Expanse global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -115,22 +115,22 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "U gjet nyje Expansei në punë!",
-            "startingNode": "Duke krijuar nyje Expansei...",
+            "runningNodeFound": "U gjet nyje WhaleCoini në punë!",
+            "startingNode": "Duke krijuar nyje WhaleCoini...",
             "startedNode": "Duke filluar aplikacionin...",
-            "nodeConnectionTimeout": "Nuk mundi të fillojë krijimin e një nyje Expansei!<br><small>Nëse ju <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>installed Gexp</a>, përdorni këtë komandë ta krijoni atë: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/expanse-org/mist/issues' class='button' target='_blank'> Ose raportoni një problem </a></small>",
-            "nodeBinaryNotFound": "Nuk u gjet nyje binare Expansei!<br><small> <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'> Lutemi krijoni një manualisht më parë. </a> </small>",
-            "nodeSyncing": "Nyja e Expanseit ka nevojë të sinkronizohet, lutemi prisni...",
+            "nodeConnectionTimeout": "Nuk mundi të fillojë krijimin e një nyje WhaleCoini!<br><small>Nëse ju <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'>installed Gexp</a>, përdorni këtë komandë ta krijoni atë: <br> <code>gexp --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoin-org/mist/issues' class='button' target='_blank'> Ose raportoni një problem </a></small>",
+            "nodeBinaryNotFound": "Nuk u gjet nyje binare WhaleCoini!<br><small> <a href='https://www.ethereum.org/cli#gexp' class='button' target='_blank'> Lutemi krijoni një manualisht më parë. </a> </small>",
+            "nodeSyncing": "Nyja e WhaleCoinit ka nevojë të sinkronizohet, lutemi prisni...",
             "nodeSyncInfo": "Duke marrë bllokun __currentBlock__ of __highestBlock__.",
             "nodeSyncConnecting": "Duke kërkuar të barabartë...",
-            "stoppingNode": "Stopping Expanse node...",
-            "nodeStarting": "Expanse node starting up...",
-            "nodeStarted": "Expanse node started",
-            "nodeConnected": "Expanse node connected",
-            "nodeStopping": "Expanse node stopping...",
-            "nodeStopped": "Expanse node stopped",
-            "nodeError": "Expanse node connection error :'(",
-            "unableToBindPort": "Expanse node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "peerSearchTimeout": "Skip peer search",
@@ -140,7 +140,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Expanse node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
@@ -201,13 +201,13 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Expanse është një platformë e decentralizuar për ndërtim aplikacionesh në një zinxhir blloqesh (blockchain): tamper-proof software i cili mund të transferojë vlerë dhe pronësi dhe jetë përgjithmonë",
+                "description": "WhaleCoin është një platformë e decentralizuar për ndërtim aplikacionesh në një zinxhir blloqesh (blockchain): tamper-proof software i cili mund të transferojë vlerë dhe pronësi dhe jetë përgjithmonë",
                 "goToTestnet": "Përdor rrjetit testues",
                 "goToTestnetDescription": "Testo lirshëm teknologjinë në një testrrjet pa përdorur ether të vërtetë.",
                 "gotoMainnet": "Përdor rrjetin kryesor",
-                "gotoMainnetDescription": " Ju do të keni nevojë për pak Expanse në mënyrë që të krijoni dhe zbatoni kontrata. Mos u shqetësoni, ne do ju ndihmojmë që të keni aq sa duhet...",
+                "gotoMainnetDescription": " Ju do të keni nevojë për pak WhaleCoin në mënyrë që të krijoni dhe zbatoni kontrata. Mos u shqetësoni, ne do ju ndihmojmë që të keni aq sa duhet...",
                 "doYouHaveAWalletFile": "A keni një skedë kulete?",
-                "walletFileDescription": "<p>Nëse ju keni marrë pjesë në Parashitjen e Expanseit 2014, ju duhet të keni një skedë të emëruar <code>ethereum_wallet_backup.json</code>. Eshtë shkarkuar pas shitjes dhe dërguar në emailin tuaj</p>",
+                "walletFileDescription": "<p>Nëse ju keni marrë pjesë në Parashitjen e WhaleCoinit 2014, ju duhet të keni një skedë të emëruar <code>ethereum_wallet_backup.json</code>. Eshtë shkarkuar pas shitjes dhe dërguar në emailin tuaj</p>",
                 "dropFilesHere": "Vendos skedën e parashitjes",
                 "creating": "Duke krijuar...",
                 "importing": "Duke marrë...",
@@ -217,7 +217,7 @@
                 "protectDescription": "Choose a password for your new account. Make it as strong as if it would protect your house keys!",
                 "accountTitle": "Load it up!",
                 "accountTitleTestnet": "Mine some!",
-                "etherDescription": "The ethereum network is based on token called “Expanse”. You’ll need a small amount of it to do anything on the Expanse network.",
+                "etherDescription": "The ethereum network is based on token called “WhaleCoin”. You’ll need a small amount of it to do anything on the WhaleCoin network.",
                 "loadItDescription": "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to ether using shapeshift. <br><br> We recommend loading somewhere between <strong>0.25 to 1 ether</strong>.",
                 "mineItDescription": "<strong>On the testnet you can mine ether yourself by going to the <em>Develop</em> menu and choosing <em>Start Mining</em>. </strong> <br> <strong> DO NOT ATTEMPT TO SEND REAL ETHER TO THIS ADDRESS </strong>",
                 "you": "YOU",
